--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     --cor-preta-mais-transaparente: rgba(0, 0, 0, 0.4);
     --cor-branca: rgba(255, 255, 255);
     --cor-cinza: rgb(200, 200, 200);
-    --cor-azul: rgba(40,120,255);
+    --cor-azul: rgba(80,160,255);
 }
 
 html{
@@ -44,7 +44,7 @@ body{
 
 .cabecalho{
     width: 100%;
-    height: 11vh;
+    height: 10vh;
     background: var(--cor-preta);
 
     position: fixed;
@@ -91,7 +91,7 @@ body{
 
 #conteudo-principal{
     width: 100%;
-    height: 85vh;
+    height: 90vh;
     
     display: flex;
     flex-direction: row;
@@ -104,14 +104,16 @@ body{
 }
 
 .conteudo-principal-apresentacao-um{
-    height: 85vh;
     width: 50%;
+    height: 90vh;
     
     position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
     flex-wrap: wrap;
+
+    text-shadow: 0px 6px 6px var(--cor-preta);
 }
 
 .conteudo-principal-apresentacao-um-texto{
@@ -185,16 +187,15 @@ body{
 /*---------- Conteúdo principal parte 2----------*/
 
 .conteudo-principal-apresentacao-dois{
-    height: 85vh;
     width: 50%;
+    height: 90vh;
     background: var(--cor-preta-menos-transaparente);
+    backdrop-filter: blur(6px);
 
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
-    backdrop-filter: blur(6px);
 }
 
 .conteudo-principal-apresentacao-dois-retrato{
@@ -238,22 +239,73 @@ body{
 /*---------- Conteúdo secundário ----------*/
 
 #conteudo-secundario{
-    height: 100vh;
     width: 100%;
+    height: 80vh;
     background-image: url("/imagens/background2.jpg");
-}
-
-.conteudo-secundario-titulo{
-    padding: 10px;
-    color: var(--cor-preta);
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
 
     display: flex;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+}
+
+.conteudo-secundario{
+    width: 85%;
+    height: 450px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    row-gap: 20px;
+}
+
+.conteudo-secundario-titulo{
+    color: var(--cor-branca);
 
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 400;
-    font-size: 20px;
+    font-size: 25px;
+}
+
+.conteudo-secundario-projetos{
+    width: 70vw;
+    height: 350px;
+
+    display: flex;
+}
+
+.imagem-teste{
+    width: 60%;
+    height: 100%;
+}
+
+.conteudo-secundario-projetos-um{
+    width: 40%;
+    height: 100%;
+    background-color: var(--cor-branca);
+    border-left: 1px solid var(--cor-preta);
+}
+
+/*---------- Conteúdo Terciário ----------*/
+
+#conteudo-terciario{
+    width: 100%;
+    height: 85vh;
+    
+    display: flex;
+    flex-direction: row;
+
+    background-image: url("/imagens/background.jpg");
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 /*---------- Rodapé ----------*/
