--- a/style.css
+++ b/style.css
@@ -8,12 +8,13 @@
 
 :root {
     --cor-preta: rgba(0, 0, 0);
-    --cor-preta-menos-transaparente: rgba(0, 0, 0, 0.7);
-    --cor-preta-mais-transaparente: rgba(0, 0, 0, 0.4);
+    --cor-preta-menos-transaparente: rgba(0, 0, 0, 0.6);
+    --cor-preta-mais-transaparente: rgba(0, 0, 0, 0.2);
     --cor-branca: rgba(255, 255, 255);
-    --cor-branca-menos-transaparente: rgba(255, 255, 255, 0.7) --cor-cinza: rgb(200, 200, 200);
-    --cor-azul: rgba(100, 100, 255);
-    --cor-azul-menos-transparente: rgba(50, 50, 255, 0.4);
+    --cor-branca-menos-transaparente: rgba(255, 255, 255, 0.7);
+    --cor-cinza-menos-transparente: rgba(200, 200, 200, 0.7);
+    --cor-azul: rgba(40, 100, 180);
+    --cor-azul-menos-transparente: rgba(40, 100, 180, 0.4);
 }
 
 html {
@@ -28,13 +29,13 @@ body {
 
 ::-webkit-scrollbar {
     width: 10px;
-    background: transparent;
+    background: black;
 }
 
 ::-webkit-scrollbar-thumb {
     border-radius: 10px;
     border: 0.5px solid var(--cor-preta);
-    background: var(--cor-preta-menos-transaparente);
+    background: var(--cor-branca-menos-transaparente);
 }
 
 ::-webkit-scrollbar-corner {
@@ -46,7 +47,7 @@ body {
 
 
 .cabecalho {
-    width: 100%;
+    width: 100vw;
     height: 10vh;
     background: var(--cor-preta);
 
@@ -78,7 +79,7 @@ body {
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 500;
-    font-size: 18px;
+    font-size: 17px;
     color: var(--cor-branca);
 
     transition: all 500ms;
@@ -96,13 +97,13 @@ body {
 
 
 #conteudo-principal {
-    width: 100%;
+    width: 100vw;
     height: 100vh;
 
     display: flex;
     flex-direction: row;
 
-    background-image: url("/imagens/background.jpg");
+    background-image: url("/imagens/background7.jpg");
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -138,11 +139,11 @@ body {
 .conteudo-principal-apresentacao-um-texto-nome {
     color: var(--cor-branca);
 
-    font-size: 35px;
+    font-size: 30px;
 }
 
 .conteudo-principal-apresentacao-um-texto-ocupacao {
-    color: var(--cor-azul);
+    color: var(--cor-branca);
 
     font-size: 25px;
 }
@@ -204,10 +205,8 @@ body {
 
 .conteudo-principal-apresentacao-dois-retrato {
     height: 200px;
-    width: 190px;
-    border-radius: 50%;
-    border: 2px solid var(--cor-branca);
-    background-color: var(--cor-azul-menos-transparente);
+    width: 200px;
+    border: 2px solid var(--cor-azul);
 
     margin-top: 80px;
     margin-bottom: 30px;
@@ -237,7 +236,7 @@ body {
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 500;
-    font-size: 13px;
+    font-size: 14px;
 }
 
 .conteudo-principal-apresentacao-um-texto,
@@ -276,17 +275,19 @@ body {
     justify-content: center;
     row-gap: 10px;
     z-index: 0;
+    background-color: var(--cor-preta-mais-transaparente);
+
 }
 
 .conteudo-secundario-titulo {
     border-bottom: 1px solid var(--cor-preta);
     position: absolute;
-    top: 40px;
+    top: 50px;
     margin-bottom: 10px;
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 400;
-    font-size: 22px;
+    font-size: 20px;
     color: var(--cor-azul);
 }
 
@@ -301,7 +302,7 @@ body {
 }
 
 .conteudo-secundario-projetos-slide {
-    width: 80%;
+    width: 100%;
     height: 90%;
     display: flex;
     flex-direction: row;
@@ -310,13 +311,13 @@ body {
 }
 
 .conteudo-secundario-projetos-slide-imagem {
-    width: 53%;
+    width: 55%;
     height: 100%;
     border: 1px solid var(--cor-azul);
 }
 
 .conteudo-secundario-projetos-slide-conteudo {
-    width: 27%;
+    width: 25%;
     height: 100%;
     background-color: var(--cor-preta-menos-transaparente);
 
@@ -330,7 +331,7 @@ body {
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 400;
-    font-size: 18px;
+    font-size: 16px;
     color: var(--cor-branca);
     text-align: center;
     padding-bottom: 5px;
@@ -347,7 +348,7 @@ body {
 }
 
 .conteudo-secundario-projetos-slide-conteudo-um-texto {
-    padding: 20px;
+    padding: 12px;
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 400;
@@ -406,22 +407,22 @@ body {
 
 .swiper-pagination-bullet {
     position: relative;
-    bottom: 50px;
-    width: 26px;
-    height: 10px;
+    bottom: 60px;
+    width: 20px;
+    height: 8px;
     border-radius: 25px;
     background-color: var(--cor-azul);
 }
 
 .swiper-button-next,
 .swiper-button-prev {
-    right: 70px;
+    right: 80px;
     color: var(--cor-azul);
     transition: all 500ms;
 }
 
 .swiper-button-prev {
-    left: 70px;
+    left: 80px;
 }
 
 .swiper-button-next:hover,
@@ -441,22 +442,248 @@ body {
     flex-direction: row;
 
     background: transparent;
-    background-image: url("/imagens/background.jpg");
+    background-image: url("/imagens/background7.jpg");
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+    row-gap: 10px;
 }
 
 .conteudo-terciario {
-    width: 85%;
-    height: 500px;
-    background-color: rgba(255, 255, 255, 0.7);
+    width: 90%;
+    height: 75%;
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    justify-content: center;
+    column-gap: 10px;
+}
+
+.conteudo-terciario-titulo {
+    border-bottom: 1px solid var(--cor-azul);
+    top: 50px;
+    margin-bottom: 10px;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    color: var(--cor-branca);
+}
+
+.conteudo-terciario-parte-um {
+    width: 70%;
+    height: 100%;
+    background-color: var(--cor-preta-menos-transaparente);
     backdrop-filter: blur(6px);
     border-radius: 10px;
 }
+
+.conteudo-terciario-parte-dois {
+    width: 30%;
+    height: 100%;
+    background-color: var(--cor-preta-menos-transaparente);
+    backdrop-filter: blur(6px);
+    border-radius: 10px;
+}
+
+.conteudo-terciario-parte-um-principal-tecnologias-titulo {
+    width: 100%;
+    height: 15%;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    color: var(--cor-branca);
+    border-bottom: 1px solid var(--cor-azul);
+    padding-top: 20px;
+}
+
+.conteudo-terciario-parte-um-principal-tecnologias-sla {
+    width: 100%;
+    height: 85%;
+}
+
+.fa-html5,
+.fa-css3-alt,
+.fa-js,
+.fa-java,
+.fa-database {
+    font-size: 35px;
+    color: var(--cor-branca);
+}
+
+.fa-html5 {
+    color: rgba(229, 76, 33, 0.8);
+}
+
+.fa-css3-alt {
+    color: rgba(38, 77, 228, 0.8);
+    ;
+}
+
+.fa-js {
+    color: rgba(247, 223, 30, 0.8);
+}
+
+.fa-java {
+    color: rgba(13, 113, 168, 0.8);
+}
+
+.fa-database {
+    color: rgba(180, 180, 180, 0.8);
+}
+
+.conteudo-terciario-parte-um-principal-tecnologias-sla {
+    display: flex;
+    flex-direction: row;
+}
+
+
+.conteudo-terciario-parte-um-principal-tecnologias-parte-um {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    row-gap: 25px;
+}
+
+.conteudo-terciario-parte-um-principal-tecnologias-parte-um-nivel {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    row-gap: 19px;
+}
+
+.conteudo-terciario-parte-um-principal-tecnologias-parte-um-nivel-circulos {
+    padding: 11px;
+    margin-right: 6px;
+}
+
+
+.conteudo-terciario-parte-um-principal-tecnologias-parte-um-nome {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    color: var(--cor-branca);
+    display: flex;
+    column-gap: 10px;
+    padding-left: 20px;
+    align-items: center;
+}
+
+.fa-circle {
+    font-size: 15px;
+    color: var(--cor-azul);
+}
+
+.conteudo-terciario-parte-um-principal-tecnologias-parte-um-nivel {}
+
+.conteudo-terciario-parte-um-principal {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    text-align: center;
+}
+
+.conteudo-terciario-parte-um-principal-tecnologias {
+    width: 240px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    row-gap: 30px;
+    border-right: 1px solid var(--cor-azul);
+    background-color: var(--cor-preta-menos-transaparente);
+}
+
+.conteudo-terciario-parte-um-principal-conhecimentos{
+    width: 60%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    column-gap: 20px;
+}
+
+
+.conteudo-terciario-parte-um-principal-conhecimentos-frontend{
+    width: 50%;
+    height: 100%;
+}
+
+.conteudo-terciario-parte-um-principal-conhecimentos-backend{
+    width: 50%;
+    height: 100%;
+}
+
+/*---------------------------------------- Conteudo terciario parte 2 ----------------------------------------*/
+
+.conteudo-terciario-parte-dois-formacoes {
+    width: 100%;
+    height: 40%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow-y: auto;
+}
+
+.conteudo-terciario-parte-dois-certificacoes {
+    width: 100%;
+    height: 60%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow-y: auto;
+}
+
+.conteudo-terciario-parte-dois-formacoes-titulo,
+.conteudo-terciario-parte-dois-certificacoes-titulo {
+    width: 100%;
+    height: 40px;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    color: var(--cor-branca);
+    text-align: center;
+    align-items: center;
+    column-gap: 10px;
+    padding-bottom: 5px;
+    padding-top: 5px;
+    border-bottom: 1px solid var(--cor-azul);
+    background-color: var(--cor-preta-menos-transaparente);
+}
+
+.conteudo-terciario-parte-dois-formacoes-conteudo {
+    width: 310px;
+    height: 90px;
+    background-color: var(--cor-branca-menos-transaparente);
+    margin-top: 15px;
+    flex-shrink: 0;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    color: var(--cor-preta);
+    text-align: start;
+    padding: 10px;
+}
+
+.fa-award {
+    font-size: 20px;
+    padding-right: 10px;
+}
+
+.fa-graduation-cap {
+    font-size: 20px;
+    padding-right: 10px;
+}
+
 
 
 /*---------------------------------------- Rodapé ----------------------------------------*/
